Envio de imagens foodfy

--- a/src/app/views/admin/create-chef.njk
+++ b/src/app/views/admin/create-chef.njk
@@ -6,7 +6,7 @@
 {% endblock head %}
 
 {% block content %}
-    <form class="recipe" method="POST" action="/admin/chefs">
+    <form class="recipe" method="POST" action="/admin/chefs" enctype="multipart/form-data">
         <section class="title">
             <h2>Criando chef</h2>
 
@@ -19,10 +19,21 @@
             <input type="text" name="name" required>
         </div>
 
-        <div class="image">
+        <div class="image-chef">
             <h3>Avatar</h3>
 
-            <input type="url" name="avatar_url" required>
+            <div id="photos-upload">
+                <p>Enviar avatar</p>
+                <input 
+                    type="file" 
+                    name="photos" 
+                    id="photos-input" 
+                    multiple="multiple" 
+                    accept="image/*" 
+                    onchange="PhotosUpload.handleFileInput(event)"
+                >
+            </div>
+
         </div>
 
     </form>
