--- a/src/app/views/admin/show.njk
+++ b/src/app/views/admin/show.njk
@@ -14,7 +14,7 @@
     </div>
 
     <div class="image">
-        <img src="{{recipe.image}}" alt="">
+        <img src="{{files[0].src}}" alt="">
     </div>
 
     <div class="info">
