--- a/public/admin/create.css
+++ b/public/admin/create.css
@@ -178,3 +178,126 @@ textarea {
 .recipe .steps input {
     margin-bottom: 15px;
 }
+
+#photos-upload {
+    margin: 0;
+}
+
+.recipe .image div{
+    margin-top: 10px;
+}
+
+.recipe .image .manager {
+    display: grid;
+    grid-template-columns: 150px 1fr;
+    gap: 10px;
+}
+
+.recipe .image #photos-upload {
+    position: relative;
+    display: flex;
+    overflow: hidden;
+    height: 150px;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #DDDDDD;
+    border-radius: 3.5px;
+}
+
+.recipe .image #photos-upload i {
+    position: absolute;
+    color: #999999;
+    width: 28px;
+    height: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer; 
+    font-size: 40px;
+}
+
+.recipe .image #photos-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.recipe .image #photos-preview {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 10px;
+    width: 100%;
+    margin: 0;
+}
+
+.recipe .image #photos-preview img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+#photos-preview .photo {
+    position: relative;
+    margin: 0;
+}
+
+#photos-preview .photo i {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.8);
+    color: red;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 300%;
+    cursor: pointer; 
+    transition: opacity 200ms;
+    opacity: 0;
+}
+
+#photos-preview .photo:hover i {
+    opacity: 1;
+}
+
+.recipe .image-chef #photos-upload {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    width: 140px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.recipe .image-chef #photos-upload p {
+    background-color: #6558C3;
+    color: white;
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: bold;
+    text-align: right;
+    padding: 9px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+
+}
+
+.recipe .image-chef #photos-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
