--- a/src/app/views/admin/layout.njk
+++ b/src/app/views/admin/layout.njk
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         {% block head %}{% endblock head %}
     </head>
