--- a/src/app/views/admin/show-chef.njk
+++ b/src/app/views/admin/show-chef.njk
@@ -15,7 +15,7 @@
     </div>
 
     <div class="image">
-        <img src="{{chef.avatar_url}}" alt="">
+        <img src="{{files[0].src}}" alt="">
     </div>
 
     <div class="info">
