Mostrar imagem das receitas na listagem

--- a/src/app/views/admin/listing.njk
+++ b/src/app/views/admin/listing.njk
@@ -19,7 +19,7 @@
                     </div>
                     <div>
                         <div class="card-title">
-                            <p class="card-title-id">{{recipe.title}}</p>
+                            <p class="card-title-id">{{recipe[recipe].title}}</p>
                         </div>
 
                         <div class="card-info">
