--- a/public/website/home.css
+++ b/public/website/home.css
@@ -183,6 +183,7 @@ header .filter button {
     width: 100%;
     height: 140px;
     border-radius: 15px;
+    object-fit: cover;
 }
 
 .card-title p {
