--- a/src/app/views/website/chefs.njk
+++ b/src/app/views/website/chefs.njk
@@ -11,7 +11,7 @@
             {% for chef in chefs %}
                 <div class="card">
                     <div class="card-image">
-                        <img class="card-image-id" src="{{chef.avatar_url}}" alt="">
+                        <img class="card-image-id" src="{{chef.image}}" alt="">
                     </div>
                     <div>
                         <div class="card-title">
