Tela de login e de cadastro de usuário

--- a/src/app/views/user/layout.njk
+++ b/src/app/views/user/layout.njk
@@ -28,7 +28,7 @@
 
                 {% else %}
 
-                    <a href="/admin/users/login" class="login-logout">Entrar</a>
+                    <a href="/users/login" class="login-logout">Entrar</a>
 
                 {% endif %}
 
