--- a/public/admin/create.css
+++ b/public/admin/create.css
@@ -64,6 +64,39 @@ header {
     text-transform: uppercase;
     align-self: flex-end;
     padding: 3px;
+    margin-right: 30px;
+}
+
+.header .users {
+    opacity: 100%;
+    font-size: 15px;
+    text-decoration: none;
+    color: #999999;
+    line-height: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    align-self: flex-end;
+    padding: 3px;
+    margin-right: 30px;
+}
+
+header .login-logout {
+    position: absolute;
+    box-sizing: border-box;
+    font-size: 15px;
+    text-decoration: none;
+    color: #999999;
+    line-height: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    right: 0;
+    transition: all 300ms;
+    background: #111111;
+    cursor: pointer;
+}
+
+.header .login-logout:hover {
+    color: white;
 }
 
 .links a.active {
@@ -76,6 +109,11 @@ header {
 }
 
 .chefs:hover {
+    color: #FFFFFF;
+    transition: font-weight 300ms;
+}
+
+.users:hover {
     color: #FFFFFF;
     transition: font-weight 300ms;
 }
