--- a/public/user/register.css
+++ b/public/user/register.css
@@ -2,9 +2,11 @@
     margin: 0;
     border: 0;
     padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
-body{
+body {
     background-color: white;
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -67,6 +69,19 @@ header {
     margin-right: 30px;
 }
 
+.header .users {
+    opacity: 100%;
+    font-size: 15px;
+    text-decoration: none;
+    color: #999999;
+    line-height: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    align-self: flex-end;
+    padding: 3px;
+    margin-right: 30px;
+}
+
 header .login-logout {
     position: absolute;
     box-sizing: border-box;
@@ -79,6 +94,7 @@ header .login-logout {
     right: 0;
     transition: all 300ms;
     background: #111111;
+    cursor: pointer;
 }
 
 .header .login-logout:hover {
@@ -99,125 +115,107 @@ header .login-logout {
     transition: font-weight 300ms;
 }
 
-.top {
+.users:hover {
+    color: #FFFFFF;
+    transition: font-weight 300ms;
+}
+
+form {
     width: 940px;
-    margin: 0px auto;
+    margin: 15px auto 50px auto;
+}
+
+form .title {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-bottom: 65px;
 }
 
-.top h2 {
-    font-weight: bold;
+form .title h2 {
     font-size: 24px;
-    line-height: 28px;
+    line-height: 29px;
     color: #111111;
-    opacity: 100%;
 }
 
-.top a {
-    background-color: #6558C3;
-    color: white;
+form .title .buttons button {
+    font-weight: bold;
     font-size: 16px;
     line-height: 19px;
-    font-weight: bold;
-    text-align: right;
-    padding: 9px 20px;
-    border-radius: 4px;
+    text-align: center;
+    color: white;
+    opacity: 100%;
+    background-color: #6558C3;
     cursor: pointer;
-    text-decoration: none;
+    border-radius: 4px;
+    padding: 9px 45px;
+    margin-right: 16px;
 }
 
-.image {
-    width: 940px;
-    height: 200px;
-    text-align: center;
-    margin: 50px auto 30px auto;
-    position: relative;
-}
-.image img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-.info {
-    width: 940px;
-    text-align: center;
-    margin: 0px auto 50px auto;
-    position: relative;
-}
-
-.info .name{
-    opacity: 100%;
-    color: #111111;
-    font-size: 36px;
-    line-height: 42px;
+form .title .buttons a {
     font-weight: bold;
-}
-
-.info .recipes {
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: white;
     opacity: 100%;
-    color: #777777;
-    font-size: 20px;
-    line-height: 24px;
-    margin-top: 4px;
+    background-color: #8A8A8A;
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 9px 45px;
+    transition: 300ms;
 }
 
-.title h2 {
-    width: 940px;
-    margin: 0px auto 30px auto;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 28px;
-    color: #111111;
-    margin-bottom: 30px;
+form .title .buttons a:hover {
+    background-color: #DC4747;
 }
 
-.cards {
-    width: 940px;
-    margin: 0px auto 300px auto;
+form .inputs {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    gap: 40px;
+    margin-bottom: 33px;
 }
 
-
-
-.card {
-    display: grid;
-    grid-template-columns: 172px 1fr;
-    gap: 20px;
-}
-
-.card img {
-    width: 172px;
-    height: 80px;
-    border-radius: 8.57px;
-    object-fit: cover;
-}
-
-.card-title p {
-    opacity: 100%;
+form .inputs p {
     color: #111111;
-    font-size: 18px;
-    line-height: 21px;
-}
-
-.card-info p {
-    opacity: 100%;
-    font-size: 14px;
-    line-height: 16px;
-    color: #777777;
-    margin-top: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 19px;
     margin-bottom: 10px;
 }
 
-.card-button-view a {
-    text-decoration: none;
+form .inputs input {
+    padding-left: 20px;
+    margin-top: 10px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    height: 49px;
+    font-size: 16px;
+    line-height: 19px;
     font-weight: bold;
-    font-size: 14px;
-    line-height: 16px;
-    color: #6558C3;
-    opacity: 100%;
+    color: #555555;
+    box-sizing: border-box;
+}
+
+form .inputs input::placeholder {
+    color: #999999;
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 300;
+}
+
+form #isAdm {
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    width: 15px;
+    height: 15px;
+}
+
+form label {
+    color: #111111;
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: bold;
 }
