--- a/src/app/views/user/register.njk
+++ b/src/app/views/user/register.njk
@@ -35,7 +35,7 @@
 
         </div>
 
-        <input type="checkbox" id="isAdm" name="isAdm" value="true">
+        <input type="checkbox" id="isAdmin" name="isAdmin" value="true">
         <label for="isAdm">Administrador</label><br>
 
     </form>
