--- a/src/app/views/session/login.njk
+++ b/src/app/views/session/login.njk
@@ -16,7 +16,7 @@
             <section class="form">
                 <h3>Iniciar Sessão</h3>
 
-                <form method="POST" action="/users/login">
+                <form method="POST" action="/admin/users/login">
                     <div class="item">
                         <p>Email</p>
                         <div class="input">
