--- a/src/app/views/user/register.njk
+++ b/src/app/views/user/register.njk
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <form method="POST" action="/admin/users/register">
+    <form class="register" method="POST" action="/admin/users/register">
         <section class="title">
             <h2>Criar Usuário</h2>
 
