--- a/public/admin/show-chef.css
+++ b/public/admin/show-chef.css
@@ -67,6 +67,19 @@ header {
     margin-right: 30px;
 }
 
+.header .users {
+    opacity: 100%;
+    font-size: 15px;
+    text-decoration: none;
+    color: #999999;
+    line-height: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    align-self: flex-end;
+    padding: 3px;
+    margin-right: 30px;
+}
+
 header .login-logout {
     position: absolute;
     box-sizing: border-box;
@@ -79,6 +92,7 @@ header .login-logout {
     right: 0;
     transition: all 300ms;
     background: #111111;
+    cursor: pointer;
 }
 
 .header .login-logout:hover {
@@ -95,6 +109,11 @@ header .login-logout {
 }
 
 .chefs:hover {
+    color: #FFFFFF;
+    transition: font-weight 300ms;
+}
+
+.users:hover {
     color: #FFFFFF;
     transition: font-weight 300ms;
 }
