--- a/src/app/views/admin/layout.njk
+++ b/src/app/views/admin/layout.njk
@@ -17,12 +17,12 @@
                 <div class="links">
                     <a class="recipes" href="/admin/recipes">Receitas</a>
                     <a class="chefs" href="/admin/chefs">Chefs</a>
-                    <a class="users" href="#">Usuários</a>
+                    <a class="users" href="/admin/users/list">Usuários</a>
                 </div>
 
                 {% if session.userId %}
 
-                    <form action="/users/logout" method="POST">
+                    <form action="/admin/users/logout" method="POST">
                         <button class="login-logout">Sair</button>
                     </form>
 
