--- a/src/app/views/user/register.njk
+++ b/src/app/views/user/register.njk
@@ -13,7 +13,7 @@
 
             <div class="buttons">
                 <button type="submit">Salvar</button>
-                <a href="#">Cancelar</a>
+                <a href="/admin/users/list">Cancelar</a>
             </div>
 
         </section>
