--- a/public/admin/listing.css
+++ b/public/admin/listing.css
@@ -2,6 +2,8 @@
     margin: 0;
     border: 0;
     padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
 body{
@@ -123,12 +125,32 @@ header {
     margin: 0px auto 50px auto;
 }
 
+.title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 32px;
+}
+
 .title h2 {
     font-weight: bold;
     font-size: 24px;
     line-height: 28px;
     color: #111111;
-    margin-bottom: 30px;
+}
+
+.title a {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: white;
+    opacity: 100%;
+    background-color: #6558C3;
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 9px 45px;
+    margin-right: 16px;
 }
 
 .cards {
