--- a/src/app/views/user/list.njk
+++ b/src/app/views/user/list.njk
@@ -12,7 +12,9 @@
         <div class="title">
             <h2>Usuários</h2>
 
-            <a href="/admin/users/register">Novo</a>
+            {% if sessionIsAdmin.is_admin == true %}
+                <a href="/admin/users/register">Novo</a>
+            {% endif %}
         </div>
 
         <div class="cards">
