Lógica de recuperação de senha

--- a/public/session/login.css
+++ b/public/session/login.css
@@ -80,6 +80,10 @@ body{
     align-items: flex-end;
 }
 
+.container .form .footer.forgot-password {
+    justify-content: flex-end;
+}
+
 .container .form .footer a {
     color: #969696;
     font-weight: bold;
