--- a/src/app/views/session/change-password.njk
+++ b/src/app/views/session/change-password.njk
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/session/login.css">
-        <title>Login</title>
+        <title>Nova senha</title>
 
     </head>
     <body>
@@ -14,9 +14,9 @@
             <img src="/assets/logo.png" alt="Logo">
 
             <section class="form">
-                <h3>Iniciar Sessão</h3>
+                <h3>Nova senha</h3>
 
-                <form method="POST" action="/admin/users/login">
+                <form method="POST" action="/admin/users/change-password">
                     <div class="item">
                         <p>Email</p>
                         <div class="input">
@@ -25,19 +25,24 @@
                     </div>
 
                     <div class="item">
-                        <p>Senha</p>
+                        <p>Nova senha</p>
                         <div class="input">
-                            <input type="password" name="password" placeholder="Digite sua senha">
+                            <input type="password" name="password" placeholder="Digite sua nova senha">
                         </div>
                     </div>
 
-                    <div class="footer">
-                        <a href="/admin/users/forgot-password">Perdeu a senha?</a>
-
-                        <button class="button" type="submit">Acessar</button>
-
+                    <div class="item">
+                        <p>Repetir senha</p>
+                        <div class="input">
+                            <input type="password" name="confirmPassword" placeholder="Repita a nova senha">
+                        </div>
                     </div>
 
+                    <div class="footer forgot-password">
+                        <button class="button" type="submit">Nova senha</button>
+                    </div>
+
+                    <input type="hidden" name="token" value="{{token}}">
                 </form>
             </section>
         </div>
