--- a/src/app/views/session/forgot-password.njk
+++ b/src/app/views/session/forgot-password.njk
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/session/login.css">
-        <title>Login</title>
+        <title>Recuperar senha</title>
 
     </head>
     <body>
@@ -14,30 +14,19 @@
             <img src="/assets/logo.png" alt="Logo">
 
             <section class="form">
-                <h3>Iniciar Sessão</h3>
+                <h3>Esqueceu a senha?</h3>
 
-                <form method="POST" action="/admin/users/login">
+                <form method="POST" action="/admin/users/forgot-password">
                     <div class="item">
                         <p>Email</p>
                         <div class="input">
-                            <input type="email" name="email" placeholder="Digite seu email">
+                            <input type="email" name="email" placeholder="Digite seu email para recuperar sua senha">
                         </div>
                     </div>
 
-                    <div class="item">
-                        <p>Senha</p>
-                        <div class="input">
-                            <input type="password" name="password" placeholder="Digite sua senha">
-                        </div>
+                    <div class="footer forgot-password">
+                        <button class="button" type="submit">Recuperar</button>
                     </div>
-
-                    <div class="footer">
-                        <a href="/admin/users/forgot-password">Perdeu a senha?</a>
-
-                        <button class="button" type="submit">Acessar</button>
-
-                    </div>
-
                 </form>
             </section>
         </div>
