--- a/src/app/views/admin/create.njk
+++ b/src/app/views/admin/create.njk
@@ -2,7 +2,7 @@
 
 {% block head %}
     <title>Create</title>
-    <link rel="stylesheet" href="/admin/create.css">
+    <link rel="stylesheet" href="/styles/private-access/recipe/create.css">
 {% endblock head %}
 
 {% block content %}
