--- a/src/app/views/admin/edit.njk
+++ b/src/app/views/admin/edit.njk
@@ -2,7 +2,7 @@
 
 {% block head %}
     <title>Edit</title>
-    <link rel="stylesheet" href="/admin/edit.css">
+    <link rel="stylesheet" href="/styles/private-access/recipe/edit.css">
 {% endblock head %}
 
 {% block content %}
