--- a/src/app/views/admin/listing-chef.njk
+++ b/src/app/views/admin/listing-chef.njk
@@ -2,7 +2,7 @@
 
 {% block head %}
     <title>Chefs</title>
-    <link rel="stylesheet" href="/admin/listing-chef.css">
+    <link rel="stylesheet" href="/styles/private-access/chef/list.css">
 {% endblock head %}
 
 {% block content %}
