--- a/src/app/views/admin/listing.njk
+++ b/src/app/views/admin/listing.njk
@@ -2,7 +2,7 @@
 
 {% block head %}
     <title>Recipes</title>
-    <link rel="stylesheet" href="/admin/listing.css">
+    <link rel="stylesheet" href="/styles/private-access/recipe/list.css">
 {% endblock head %}
 
 {% block content %}
