--- a/src/app/views/admin/show-chef.njk
+++ b/src/app/views/admin/show-chef.njk
@@ -2,7 +2,7 @@
 
 {% block head %}
     <title>{{chef.name}}</title>
-    <link rel="stylesheet" href="/admin/show-chef.css">
+    <link rel="stylesheet" href="/styles/private-access/chef/show.css">
 {% endblock head %}
 
 {% block content %}
