--- a/src/app/views/admin/show.njk
+++ b/src/app/views/admin/show.njk
@@ -2,7 +2,7 @@
 
 {% block head %}
     <title>{{recipe.title}}</title>
-    <link rel="stylesheet" href="/admin/show.css">
+    <link rel="stylesheet" href="/styles/private-access/recipe/show.css">
 {% endblock head %}
 
 {% block content %}
