--- a/src/app/views/session/forgot-password.njk
+++ b/src/app/views/session/forgot-password.njk
@@ -1,37 +1,22 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/session/login.css">
-        <title>Recuperar senha</title>
+{% extends "session/layout.njk" %}
 
-    </head>
-    <body>
-        {% include "parts/messages.njk" %}
+{% block head %}
+    <title>Recuperar senha</title>
+{% endblock head %}
 
-        <div class="container">
+{% block content %}
+    <h3>Esqueceu a senha?</h3>
 
-            <img src="/assets/logo.png" alt="Logo">
-
-            <section class="form">
-                <h3>Esqueceu a senha?</h3>
-
-                <form method="POST" action="/admin/users/forgot-password">
-                    <div class="item">
-                        <p>Email</p>
-                        <div class="input">
-                            <input type="email" name="email" placeholder="Digite seu email para recuperar sua senha">
-                        </div>
-                    </div>
-
-                    <div class="footer forgot-password">
-                        <button class="button" type="submit">Recuperar</button>
-                    </div>
-                </form>
-            </section>
+    <form method="POST" action="/admin/users/forgot-password">
+        <div class="item">
+            <p>Email</p>
+            <div class="input">
+                <input type="email" name="email" placeholder="Digite seu email para recuperar sua senha">
+            </div>
         </div>
 
-        <script src="/script.js"></script>
-    </body>
-</html>
+        <div class="footer forgot-password">
+            <button class="button" type="submit">Recuperar</button>
+        </div>
+    </form>
+{% endblock content %}
