--- a/src/app/views/user/edit.njk
+++ b/src/app/views/user/edit.njk
@@ -1,8 +1,8 @@
 {% extends "user/layout.njk" %}
 
 {% block head %}
-    <title>Atualizar user</title>
-    <link rel="stylesheet" href="/user/edit.css">
+    <title>Atualizar usuário</title>
+    <link rel="stylesheet" href="/styles/private-access/user/edit.css">
 {% endblock head %}
 
 {% block content %}
