--- a/src/app/views/user/list.njk
+++ b/src/app/views/user/list.njk
@@ -1,8 +1,8 @@
 {% extends "user/layout.njk" %}
 
 {% block head %}
-    <title>Users</title>
-    <link rel="stylesheet" href="/user/list.css">
+    <title>Usuários</title>
+    <link rel="stylesheet" href="/styles/private-access/user/list.css">
 {% endblock head %}
 
 {% block content %}
