--- a/src/app/views/user/register.njk
+++ b/src/app/views/user/register.njk
@@ -1,8 +1,8 @@
 {% extends "user/layout.njk" %}
 
 {% block head %}
-    <title>Register user</title>
-    <link rel="stylesheet" href="/user/register.css">
+    <title>Cadastrar usuário</title>
+    <link rel="stylesheet" href="/styles/private-access/user/register.css">
 {% endblock head %}
 
 {% block content %}
