--- a/src/app/views/admin/edit-chef.njk
+++ b/src/app/views/admin/edit-chef.njk
@@ -2,7 +2,7 @@
 
 {% block head %}
     <title>Edit</title>
-    <link rel="stylesheet" href="/admin/edit.css">
+    <link rel="stylesheet" href="/styles/private-access/chef/edit.css">
 {% endblock head %}
 
 {% block content %}
