--- a/src/app/views/session/change-password.njk
+++ b/src/app/views/session/change-password.njk
@@ -1,53 +1,38 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/session/login.css">
-        <title>Nova senha</title>
+{% extends "session/layout.njk" %}
 
-    </head>
-    <body>
-        {% include "parts/messages.njk" %}
+{% block head %}
+    <title>Nova senha</title>
+{% endblock head %}
 
-        <div class="container">
+{% block content %}
+    <h3>Nova senha</h3>
 
-            <img src="/assets/logo.png" alt="Logo">
-
-            <section class="form">
-                <h3>Nova senha</h3>
-
-                <form method="POST" action="/admin/users/change-password">
-                    <div class="item">
-                        <p>Email</p>
-                        <div class="input">
-                            <input type="email" name="email" placeholder="Digite seu email">
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <p>Nova senha</p>
-                        <div class="input">
-                            <input type="password" name="password" placeholder="Digite sua nova senha">
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <p>Repetir senha</p>
-                        <div class="input">
-                            <input type="password" name="confirmPassword" placeholder="Repita a nova senha">
-                        </div>
-                    </div>
-
-                    <div class="footer forgot-password">
-                        <button class="button" type="submit">Nova senha</button>
-                    </div>
-
-                    <input type="hidden" name="token" value="{{token}}">
-                </form>
-            </section>
+    <form method="POST" action="/admin/users/change-password">
+        <div class="item">
+            <p>Email</p>
+            <div class="input">
+                <input type="email" name="email" placeholder="Digite seu email">
+            </div>
         </div>
 
-        <script src="/script.js"></script>
-    </body>
-</html>
+        <div class="item">
+            <p>Nova senha</p>
+            <div class="input">
+                <input type="password" name="password" placeholder="Digite sua nova senha">
+            </div>
+        </div>
+
+        <div class="item">
+            <p>Repetir senha</p>
+            <div class="input">
+                <input type="password" name="confirmPassword" placeholder="Repita a nova senha">
+            </div>
+        </div>
+
+        <div class="footer forgot-password">
+            <button class="button" type="submit">Nova senha</button>
+        </div>
+
+        <input type="hidden" name="token" value="{{token}}">
+    </form>
+{% endblock content %}
