--- a/public/styles/private-access/recipe/list.css
+++ b/public/styles/private-access/recipe/list.css
@@ -169,6 +169,7 @@ header {
     width: 172px;
     height: 80px;
     border-radius: 8.57px;
+    object-fit: cover;
 }
 
 .card-title p {
@@ -176,6 +177,10 @@ header {
     color: #111111;
     font-size: 18px;
     line-height: 21px;
+    max-width: 240px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .card-info p {
@@ -185,6 +190,10 @@ header {
     color: #777777;
     margin-top: 5px;
     margin-bottom: 10px;
+    max-width: 240px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .card-button-view a {
@@ -194,4 +203,32 @@ header {
     line-height: 16px;
     color: #6558C3;
     opacity: 100%;
+}
+
+@keyframes hidemessage {
+    to {
+        top: -50px;
+        opacity: 0;
+    }
+}
+
+.messages {
+    display: flex;
+    justify-content: center;
+    padding: 16px;
+    position: absolute;
+    width: 100%;
+    color: white;
+    top: 0;
+    opacity: 1;
+
+    animation: hidemessage 400ms 5s ease-out forwards;
+}
+
+.messages.error {
+    background-color: #e74c3c;
+}
+
+.messages.success {
+    background-color: rgb(122, 182, 30);
 }
