--- a/public/styles/private-access/recipe/show.css
+++ b/public/styles/private-access/recipe/show.css
@@ -2,6 +2,7 @@
     margin: 0;
     border: 0;
     padding: 0;
+    flex-shrink: 0;
 }
 
 body{
@@ -162,6 +163,7 @@ header .login-logout {
     text-align: center;
     margin: 30px auto;
     position: relative;
+    word-wrap: break-word;
 }
 
 .info .title{
@@ -185,6 +187,7 @@ header .login-logout {
     text-align: center;
     margin: 30px auto;
     position: relative;
+    word-wrap: break-word;
 }
 
 .ingredients .title {
@@ -224,6 +227,7 @@ header .login-logout {
     text-align: center;
     margin: 30px auto;
     position: relative;
+    word-wrap: break-word;
 }
 
 .preparation .title {
@@ -262,6 +266,7 @@ header .login-logout {
     text-align: center;
     margin: 30px auto;
     position: relative;
+    word-wrap: break-word;
 }
 
 .additional-information .title {
@@ -301,6 +306,7 @@ header .login-logout {
     margin: 0px auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .top h2 {
@@ -309,6 +315,10 @@ header .login-logout {
     line-height: 28px;
     color: #111111;
     opacity: 100%;
+    max-width: 80%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .top a {
@@ -322,4 +332,32 @@ header .login-logout {
     border-radius: 4px;
     cursor: pointer;
     text-decoration: none;
+}
+
+@keyframes hidemessage {
+    to {
+        top: -50px;
+        opacity: 0;
+    }
+}
+
+.messages {
+    display: flex;
+    justify-content: center;
+    padding: 16px;
+    position: absolute;
+    width: 100%;
+    color: white;
+    top: 0;
+    opacity: 1;
+
+    animation: hidemessage 400ms 5s ease-out forwards;
+}
+
+.messages.error {
+    background-color: #e74c3c;
+}
+
+.messages.success {
+    background-color: rgb(122, 182, 30);
 }
