--- a/src/app/views/private-access/user/list.njk
+++ b/src/app/views/private-access/user/list.njk
@@ -13,7 +13,7 @@
             <h2>Usuários</h2>
 
             {% if sessionIsAdmin.is_admin == true %}
-                <a href="/admin/users/register">Novo</a>
+                <a href="/admin/users/create">Novo</a>
             {% endif %}
         </div>
 
