--- a/src/app/views/private-access/user/edit.njk
+++ b/src/app/views/private-access/user/edit.njk
@@ -31,7 +31,7 @@
             <div class="item">
                 <p>Email</p>
                 <div class="input">
-                    <input type="email" name="email" value="{{user.email}}">
+                    <input type="email" name="email" value="{{user.email}}" required="required">
                 </div>
             </div>
 
