--- a/src/app/views/private-access/chef/create.njk
+++ b/src/app/views/private-access/chef/create.njk
@@ -28,6 +28,7 @@
                     type="file" 
                     name="photos" 
                     id="photos-input" 
+                    required
                     multiple="multiple" 
                     accept="image/*" 
                     onchange="PhotosUpload.handleFileInput(event)"
