--- a/src/app/views/private-access/recipe/create.njk
+++ b/src/app/views/private-access/recipe/create.njk
@@ -19,7 +19,7 @@
             <div class="manager">
                 <div id="photos-upload">
                     <i class="material-icons">add</i>
-                    <input type="file" name="photos" id="photos-input" multiple="multiple" accept="image/*" onchange="PhotosUpload.handleFileInput(event)">
+                    <input type="file" name="photos" id="photos-input" required multiple="multiple" accept="image/*" onchange="PhotosUpload.handleFileInput(event)">
                 </div>
 
                 <div id="photos-preview">
